--- a/sdks/python/container/Dockerfile
+++ b/sdks/python/container/Dockerfile
@@ -16,7 +16,7 @@
 # limitations under the License.
 ###############################################################################
 
-FROM python:3.4-stretch
+FROM python:2-stretch
 MAINTAINER "Apache Beam <dev@beam.apache.org>"
 
 # Install native bindings required for dependencies.
@@ -31,11 +31,10 @@ RUN apt-get update && \
 
 # Install packages required by the Python SDK and common dependencies of the user code.
 
-# Specifying dependency versions manually helps avoiding dependency conflicts in the container.
 # SDK dependencies not listed in base_image_requirements.txt will be installed when we install SDK
 # in the next RUN statement.
 
-COPY target/base_image_requirements.txt /tmp/base_image_requirements.txt
+COPY base_image_requirements.txt /tmp/base_image_requirements.txt
 RUN \
     pip install -r /tmp/base_image_requirements.txt && \
     # Check that the fast implementation of protobuf is used.
@@ -44,12 +43,11 @@ RUN \
     rm -rf /root/.cache/pip
 
 
-ENV BEAM_EXPERIMENTAL_PY3=1
-COPY target/apache-beam.tar.gz /opt/apache/beam/tars/
+COPY apache-beam.tar.gz /opt/apache/beam/tars/
 RUN pip install /opt/apache/beam/tars/apache-beam.tar.gz[gcp] && \
     # Remove pip cache.
     rm -rf /root/.cache/pip
 
-ADD launcher/linux_amd64/boot /opt/apache/beam/
+ADD linux_amd64/boot /opt/apache/beam/
 
 ENTRYPOINT ["/opt/apache/beam/boot"]
