--- a/sdks/python/container/py3/Dockerfile
+++ b/sdks/python/container/py3/Dockerfile
@@ -16,7 +16,7 @@
 # limitations under the License.
 ###############################################################################
 
-FROM python:2-stretch
+FROM python:3.4-stretch
 MAINTAINER "Apache Beam <dev@beam.apache.org>"
 
 # Install native bindings required for dependencies.
@@ -31,11 +31,14 @@ RUN apt-get update && \
 
 # Install packages required by the Python SDK and common dependencies of the user code.
 
-# Specifying dependency versions manually helps avoiding dependency conflicts in the container.
+# Specifying dependency versions manually in base_image_requirements.txt helps to prevent
+# dependency conflicts in the container, but requires keeping the versions in sync with
+# the dependencies at sdks/python/setup.py.
+
 # SDK dependencies not listed in base_image_requirements.txt will be installed when we install SDK
 # in the next RUN statement.
 
-COPY target/base_image_requirements.txt /tmp/base_image_requirements.txt
+COPY base_image_requirements.txt /tmp/base_image_requirements.txt
 RUN \
     pip install -r /tmp/base_image_requirements.txt && \
     # Check that the fast implementation of protobuf is used.
@@ -45,11 +48,11 @@ RUN \
 
 
 ENV BEAM_EXPERIMENTAL_PY3=1
-COPY target/apache-beam.tar.gz /opt/apache/beam/tars/
+COPY apache-beam.tar.gz /opt/apache/beam/tars/
 RUN pip install /opt/apache/beam/tars/apache-beam.tar.gz[gcp] && \
     # Remove pip cache.
     rm -rf /root/.cache/pip
 
-ADD launcher/linux_amd64/boot /opt/apache/beam/
+ADD linux_amd64/boot /opt/apache/beam/
 
 ENTRYPOINT ["/opt/apache/beam/boot"]
