[DO NOT MERGE] Restricting tests to run

--- a/runners/google-cloud-dataflow-java/build.gradle
+++ b/runners/google-cloud-dataflow-java/build.gradle
@@ -169,7 +169,7 @@ task examplesJavaIntegrationTest(type: Test) {
 
   // The examples/java preCommit task already covers running WordCountIT/WindowedWordCountIT so
   // this postCommit integration test excludes them.
-  include '**/*IT.class'
+  include '**/*SessionsIT.class'
   exclude '**/WordCountIT.class'
   exclude '**/WindowedWordCountIT.class'
   maxParallelForks 4
