--- a/website/build.gradle
+++ b/website/build.gradle
@@ -38,6 +38,22 @@ def shell = { cmd ->
   } 
 }
 
+
+def envdir = "${buildDir}/gradleenv"
+
+task setupVirtualenv {
+  doLast {
+    exec {
+      commandLine 'virtualenv', "${envdir}"
+    }
+    exec {
+      executable 'sh'
+      args '-c', ". ${envdir}/bin/activate && pip install beautifulsoup4"
+    }
+  }
+  outputs.dirs(envdir)
+}
+
 task buildDockerImage(type: Exec) {
   inputs.files 'Gemfile', 'Gemfile.lock'
   commandLine 'docker', 'build', '-t', dockerImageTag, '.'
@@ -80,10 +96,12 @@ task cleanWebsite(type: Delete) {
 clean.dependsOn cleanWebsite
 
 task buildWebsite(type: Exec) {
+  def baseurlFlag = project.findProperty('pullId') ? "--baseurl=/${project.findProperty('pullId')}" : ''
   dependsOn startDockerContainer, setupBuildDir
   finalizedBy stopAndRemoveDockerContainer
   inputs.files 'Gemfile.lock', '_config.yml'
   inputs.dir 'src'
+  inputs.property 'baseurl', baseurlFlag
   outputs.dir "$buildDir/.sass-cache"
   outputs.dir buildContentDir
   commandLine 'docker', 'exec',
@@ -91,7 +109,7 @@ task buildWebsite(type: Exec) {
     """cd $dockerWorkDir/build/website && \
       bundle exec jekyll build \
       --config $dockerWorkDir/website/_config.yml \
-      --incremental \
+      --incremental ${baseurlFlag} \
       --source $dockerWorkDir/website/src
       """
 }
@@ -184,3 +202,32 @@ task publishWebsite << {
 
 commitWebsite.dependsOn testWebsite
 publishWebsite.dependsOn commitWebsite
+
+/*
+ * Stages a pull request on GCS
+ * For example:
+ *   ./gradlew :beam-website:stageWebsite -PpullId=${ghprbPullId}
+ */
+task stageWebsite << {
+  assert project.hasProperty('pullId')
+  assert pullId.isInteger()
+
+  def gcs_path = "gs://apache-beam-website-pull-requests/${pullId}"
+
+  // Remove current site if it exists.
+  shell "gsutil -m rm -r -f ${gcs_path} || true"
+
+  // Fixup the links to index.html files
+  shell "cd ${buildDir} && ln -s generated-content content || true"
+  shell ". ${envdir}/bin/activate && cd ${buildDir} && " +
+        "python ${project.rootDir}/website/.jenkins/append_index_html_to_internal_links.py"
+
+  // Copy the build website to GCS
+  shell "gsutil -m cp -r ${buildContentDir} ${gcs_path} || true"
+
+  println "Website published to http://apache-beam-website-pull-" +
+      "requests.storage.googleapis.com/${pullId}/index.html"
+}
+
+stageWebsite.dependsOn setupVirtualenv
+stageWebsite.dependsOn buildWebsite
