--- a/website/Rakefile
+++ b/website/Rakefile
@@ -9,17 +9,14 @@ task :test do
       :connecttimeout => 40 },
     :allow_hash_href => true,
     :check_html => true,
-    :file_ignore => [/javadoc/, /v2/, /pydoc/],
+    :file_ignore => [/v2/],
     :url_ignore => [
-        # Javadocs and Pydocs are only available on asf-site branch
-        /documentation\/sdks\/javadoc/,
-        /documentation\/sdks\/pydoc/,
-
         /jstorm.io/,
         /datatorrent.com/,
         /ai.google/, # https://issues.apache.org/jira/browse/INFRA-16527
         /globenewswire.com/, # https://issues.apache.org/jira/browse/BEAM-5518
-        /www.se-radio.net/ # BEAM-5611: Can fail with rate limit HTTP 508 error
+        /www.se-radio.net/, # BEAM-5611: Can fail with rate limit HTTP 508 error
+        /beam.apache.org\/releases/ # BEAM-4499 remove once publishing is migrated
     ],
     :parallel => { :in_processes => Etc.nprocessors },
     }).run
