--- a/website/build.gradle
+++ b/website/build.gradle
@@ -139,7 +139,8 @@ createBuildTask( name:'Gcs', useTestConfig: true, baseUrl: getBaseUrl(), dockerW
 createBuildTask( name:'Apache', dockerWorkDir: dockerWorkDir)
 
 def getBaseUrl() {
-  project.findProperty('githubPullRequestId')?.trim() ?: 'latest'
+  project.findProperty('githubPullRequestId')?.trim() ?:
+    "${System.getProperty('user.name')}-${grgit.branch.current().getName()}"
 }
 def buildContentDir(name) {
   "${project.rootDir}/build/website/generated-${name.toLowerCase()}-content"
