--- a/sdks/python/build.gradle
+++ b/sdks/python/build.gradle
@@ -97,101 +97,63 @@ task depSnapshot(dependsOn: 'installGcpTest') {
   }
 }
 
+def pythonSdkDeps = files(
+    fileTree(dir: 'apache_beam', includes: ['**/*.py', '**/*.pyx', '**/*.pxd']),
+    fileTree(dir: 'apache_beam/testing/data'),
+    fileTree(dir: "${project.rootDir}/model"),
+    "MANIFEST.in",
+    "gen_protos.py",
+    "setup.cfg",
+    "setup.py",
+    "test_config.py",
+    "tox.ini")
+
+def toxTask = {
+  name, tox_env -> tasks.create(name) {
+    dependsOn = ['setupVirtualenv']
+    doLast {
+      exec {
+        executable 'sh'
+        args '-c', "set -o pipefail && . ${envdir}/bin/activate && tox ${tox_opts} -e $tox_env | tee ${outputs.files[0].path}"
+      }
+    }
+    inputs.files pythonSdkDeps
+    outputs.file "${project.buildDir}/tox-${tox_env}.log"
+  }
+}
+
 task lint {}
 check.dependsOn lint
 
-task lintPy27(dependsOn: 'setupVirtualenv') {
-  doLast {
-    exec {
-      executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && tox ${tox_opts} -e py27-lint"
-    }
-  }
-}
+toxTask "lintPy27", "py27-lint"
 lint.dependsOn lintPy27
 
-task lintPy27_3(dependsOn: 'setupVirtualenv') {
-  doLast {
-    exec {
-      executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && tox ${tox_opts} -e py27-lint3"
-    }
-  }
-}
+toxTask "lintPy27_3", "py27-lint3"
 lint.dependsOn lintPy27_3
 
-task lintPy3(dependsOn: 'setupVirtualenv') {
-  doLast {
-    exec {
-      executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && tox ${tox_opts} -e py3-lint"
-    }
-  }
-}
+toxTask "lintPy3", "py3-lint"
 lint.dependsOn lintPy3
 
-task testGcp(dependsOn: 'setupVirtualenv') {
-  doLast {
-    exec {
-      executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && tox ${tox_opts} -e py27-gcp"
-    }
-  }
-}
+toxTask "testGcp", "py27-gcp"
 test.dependsOn testGcp
 
-task testPython2(dependsOn: 'setupVirtualenv') {
-  doLast {
-    exec {
-      executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && tox ${tox_opts} -e py27"
-    }
-  }
-}
+toxTask "testPython2", "py27"
 test.dependsOn testPython2
 
-task testPython3(dependsOn: 'setupVirtualenv') {
-  doLast {
-    exec {
-      executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && tox ${tox_opts} -e py3"
-    }
-  }
-}
+toxTask "testPython3", "py3"
 test.dependsOn testPython3
 
-task testCython(dependsOn: 'setupVirtualenv') {
-  doLast {
-    exec {
-      executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && tox ${tox_opts} -e py27-cython"
-    }
-  }
-}
+toxTask "testCython", "py27-cython"
 test.dependsOn testCython
 // Ensure that testCython runs exclusively to other tests. This line is not
 // actually required, since gradle doesn't do parallel execution within a
 // project.
 testCython.mustRunAfter testPython2, testGcp
 
-task docs(dependsOn: 'setupVirtualenv') {
-  doLast {
-    exec {
-      executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && tox ${tox_opts} -e docs"
-    }
-  }
-}
+toxTask "docs", "docs"
 assemble.dependsOn docs
 
-task cover(dependsOn: 'setupVirtualenv') {
-  doLast {
-    exec {
-      executable 'sh'
-      args '-c', ". ${envdir}/bin/activate && tox ${tox_opts} -e cover"
-    }
-  }
-}
+toxTask "cover", "cover"
 
 task preCommit() {
   dependsOn "docs"
