--- a/settings.gradle
+++ b/settings.gradle
@@ -174,6 +174,8 @@ include "beam-sdks-python-container"
 project(":beam-sdks-python-container").dir = file("sdks/python/container")
 include "beam-sdks-python-container-py3"
 project(":beam-sdks-python-container-py3").dir = file("sdks/python/container/py3")
+include "beam-sdks-java-test-utils"
+project(":beam-sdks-java-test-utils").dir = file("sdks/java/testing/test-utils")
 include "beam-vendor-sdks-java-extensions-protobuf"
 project(":beam-vendor-sdks-java-extensions-protobuf").dir = file("vendor/sdks-java-extensions-protobuf")
 include "beam-website"
