--- a/runners/google-cloud-dataflow-java/examples/build.gradle
+++ b/runners/google-cloud-dataflow-java/examples/build.gradle
@@ -48,6 +48,7 @@ task preCommit(type: Test) {
      "--tempRoot=${gcsTempRoot}",
      "--runner=TestDataflowRunner",
      "--dataflowWorkerJar=${dataflowWorkerJar}",
+     "--workerHarnessContainerImage=",
   ]
   testClassesDirs = files(project(":beam-examples-java").sourceSets.test.output.classesDirs)
   include "**/WordCountIT.class"
