--- a/.test-infra/metrics/beamgrafana-deploy.yaml
+++ b/.test-infra/metrics/beamgrafana-deploy.yaml
@@ -34,7 +34,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: beammetricssyncjenkins
-        image: gcr.io/apache-beam-testing/beammetricssyncjenkins:v15
+        image: gcr.io/apache-beam-testing/beammetricssyncjenkins:v20181016
         env:
           - name: JENSYNC_HOST
             value: 127.0.0.1
@@ -48,6 +48,25 @@ spec:
                 name: beammetrics-psql-db-credentials
                 key: username
           - name: JENSYNC_DBPWD
+            valueFrom:
+              secretKeyRef:
+                name: beammetrics-psql-db-credentials
+                key: password
+      - name: beammetricssyncjira
+        image: gcr.io/apache-beam-testing/beammetricssyncjira:v20181016
+        env:
+          - name: DB_HOST
+            value: 127.0.0.1
+          - name: DB_PORT
+            value: "5432"
+          - name: DB_DBNAME
+            value: beammetrics
+          - name: DB_DBUSERNAME
+            valueFrom:
+              secretKeyRef:
+                name: beammetrics-psql-db-credentials
+                key: username
+          - name: DB_DBPWD
             valueFrom:
               secretKeyRef:
                 name: beammetrics-psql-db-credentials
