--- a/build.gradle
+++ b/build.gradle
@@ -181,7 +181,8 @@ check.dependsOn rat
 // This indirection also makes Jenkins use the branch of the PR
 // for the test definitions.
 task javaPreCommit() {
-  dependsOn ":rat"
+    dependsOn ":beam-runners-google-cloud-dataflow-java-examples:preCommit"
+//  dependsOn ":rat"
   // We need to list the model/* builds since sdks/java/core doesn't
   // depend on any of the model.
 //  dependsOn ":beam-model-pipeline:build"
@@ -191,7 +192,7 @@ task javaPreCommit() {
 //  dependsOn ":beam-runners-google-cloud-dataflow-java-fn-api-worker:build"
 //  dependsOn ":beam-sdks-java-core:buildNeeded"
 //  dependsOn ":beam-sdks-java-core:buildDependents"
-  dependsOn ":beam-examples-java:preCommit"
+//  dependsOn ":beam-examples-java:preCommit"
 //  dependsOn ":beam-sdks-java-extensions-sql-jdbc:preCommit"
 //  dependsOn ":beam-sdks-java-javadoc:allJavadoc"
 }
