Setup a separate jenkin job to run fn-api precommit

--- a/runners/google-cloud-dataflow-java/examples/build.gradle
+++ b/runners/google-cloud-dataflow-java/examples/build.gradle
@@ -106,7 +106,10 @@ task preCommitFnApiWorker(type: Test) {
   }
 }
 
-task preCommit() {
+task preCommit () {
   dependsOn preCommitLegacyWorker
+}
+
+task preCommitFnApi () {
   dependsOn preCommitFnApiWorker
 }
