--- a/sdks/java/io/hadoop-format/build.gradle
+++ b/sdks/java/io/hadoop-format/build.gradle
@@ -60,7 +60,7 @@ dependencies {
   testCompile project(path: ":beam-sdks-java-io-hadoop-input-format", configuration: "shadowTest")
   testCompile project(path: ":beam-examples-java", configuration: "shadowTest")
   testCompile library.java.postgres
-  testCompile "org.apache.logging.log4j:log4j-core:$log4j_version"
+  testCompile library.java.slf4j_jdk14
   testCompile library.java.junit
   testCompile library.java.hamcrest_core
   testCompile library.java.hamcrest_library
